--- a/environments/contrail/contrail-services.yaml
+++ b/environments/contrail/contrail-services.yaml
@@ -32,16 +32,16 @@ parameter_defaults:
   ContrailConfigIfmapUserName: api-server
   ContrailConfigIfmapUserPassword: api-server
   OvercloudControlFlavor: control
-  OvercloudContrailControllerFlavor: contrail-controller
-  OvercloudContrailAnalyticsFlavor: contrail-analytics
-  OvercloudContrailAnalyticsDatabaseFlavor: contrail-analytics-database
-  OvercloudContrailTsnFlavor: contrail-tsn
+  OvercloudContrailControllerWithContainerFlavor: contrail-controller
+  OvercloudContrailAnalyticsWithContainerFlavor: contrail-analytics
+  OvercloudContrailAnalyticsDatabaseWithContainerFlavor: contrail-analytics-database
+  OvercloudContrailTsnWithContainerFlavor: contrail-tsn
   OvercloudComputeFlavor: compute
   ControllerCount: 1
-  ContrailControllerCount: 1
-  ContrailAnalyticsCount: 1
-  ContrailAnalyticsDatabaseCount: 1
-  ContrailTsnCount: 1
+  ContrailControllerWithContainerCount: 1
+  ContrailAnalyticsWithContainerCount: 1
+  ContrailAnalyticsDatabaseWithContainerCount: 1
+  #ContrailTsnCount: 1
   ComputeCount: 1
   DnsServers: ["8.8.8.8","8.8.4.4"]
   NtpServer: 10.0.0.1
