--- a/environments/contrail/contrail-services.yaml
+++ b/environments/contrail/contrail-services.yaml
@@ -8,12 +8,12 @@ resource_registry:
   OS::TripleO::Services::ComputeNeutronOvsAgent: OS::Heat::None
   OS::TripleO::NodeUserData: install_vrouter_kmod.yaml
   OS::TripleO::Services::ContrailHeat: ../../puppet/services/network/contrail-heat.yaml
-  OS::TripleO::Services::ContrailAnalytics: ../../puppet/services/network/contrail-analytics.yaml
-  OS::TripleO::Services::ContrailAnalyticsDatabase: ../../puppet/services/network/contrail-analytics-database.yaml
-  OS::TripleO::Services::ContrailConfig: ../../puppet/services/network/contrail-config.yaml
-  OS::TripleO::Services::ContrailControl: ../../puppet/services/network/contrail-control.yaml
-  OS::TripleO::Services::ContrailDatabase: ../../puppet/services/network/contrail-database.yaml
-  OS::TripleO::Services::ContrailWebUI: ../../puppet/services/network/contrail-webui.yaml
+  OS::TripleO::Services::ContrailAnalyticsNew: ../../puppet/services/network/contrail-analytics.yaml
+  OS::TripleO::Services::ContrailAnalyticsDatabaseNew: ../../puppet/services/network/contrail-analytics-database.yaml
+  OS::TripleO::Services::ContrailConfigNew: ../../puppet/services/network/contrail-config.yaml
+  OS::TripleO::Services::ContrailControlNew: ../../puppet/services/network/contrail-control.yaml
+  OS::TripleO::Services::ContrailDatabaseNew: ../../puppet/services/network/contrail-database.yaml
+  OS::TripleO::Services::ContrailWebUINew: ../../puppet/services/network/contrail-webui.yaml
   OS::TripleO::Services::ContrailTsn: ../../puppet/services/network/contrail-tsn.yaml
   OS::TripleO::Services::ComputeNeutronCorePlugin: ../../puppet/services/network/contrail-vrouter.yaml
   OS::TripleO::Services::NeutronCorePlugin: ../../puppet/services/network/contrail-neutron-plugin.yaml
