Adding changes needed to stand up a new Contrail cluster.

--- a/environments/contrail/contrail-net-single.yaml
+++ b/environments/contrail/contrail-net-single.yaml
@@ -6,6 +6,11 @@ resource_registry:
   OS::TripleO::ContrailAnalyticsDatabaseWithContainer::Net::SoftwareConfig: contrail-nic-config-single.yaml
   OS::TripleO::ContrailTsnWithContainer::Net::SoftwareConfig: contrail-nic-config-compute-single.yaml
 
+  OS::TripleO::ContrailController::Net::SoftwareConfig: contrail-nic-config-single.yaml
+  OS::TripleO::ContrailAnalytics::Net::SoftwareConfig: contrail-nic-config-single.yaml
+  OS::TripleO::ContrailAnalyticsDatabase::Net::SoftwareConfig: contrail-nic-config-single.yaml
+  OS::TripleO::ContrailTsn::Net::SoftwareConfig: contrail-nic-config-compute-single.yaml
+
 parameter_defaults:
   ControlPlaneSubnetCidr: '24'
   ControlPlaneDefaultRoute: 192.0.2.254
