--- a/environments/contrail/install_vrouter_kmod.yaml
+++ b/environments/contrail/install_vrouter_kmod.yaml
@@ -8,6 +8,9 @@ parameters:
   ContrailRepo:
     type: string
     default: http://192.0.2.1/contrail
+  ContrailRepoNew:
+    type: string
+    default: http://192.0.2.1/contrail-new
   VrouterPhysicalInterface:
     default: 'eth0'
     description: vRouter physical interface
@@ -32,17 +35,29 @@ resources:
         str_replace:
           template: |
             #!/bin/bash
+            echo "contrail123" |passwd root --stdin
             #sed -i '/\[main\]/a \ \ \ \ \parser = future' /etc/puppet/puppet.conf
+            cat <<EOF > /etc/yum.repos.d/contrail.repo
+            [Contrail]
+            name=Contrail Repo
+            baseurl=$contrail_repo
+            enabled=1
+            gpgcheck=0
+            protect=1
+            EOF
+            if [[ `hostname |awk -F"-" '{print $2}'` == "contrailcontroller" || `hostname |awk -F"-" '{print $2}'` == "contrailanalytics" || `hostname |awk -F"-" '{print $2}'` == "contrailanalyticsdatabase" ]]; then
+              sed -i '/\[main\]/a \ \ \ \ \parser = future' /etc/puppet/puppet.conf
+            fi
             if [[ `hostname |awk -F"-" '{print $2}'` == "contrailcontrollerwithcontainer" || `hostname |awk -F"-" '{print $2}'` == "contrailanalyticswithcontainer" || `hostname |awk -F"-" '{print $2}'` == "contrailanalyticsdatabasewithcontainer" ]]; then
               sed -i '/\[main\]/a \ \ \ \ \parser = future' /etc/puppet/puppet.conf
-              cat <<EOF > /etc/yum.repos.d/contrail.repo
+              cat <<-EOF > /etc/yum.repos.d/contrail-new.repo
               [Contrail]
-              name=Contrail Repo
-              baseurl=$contrail_repo
+              name=Contrail Repo New
+              baseurl=$contrail_repo_new
               enabled=1
               gpgcheck=0
               protect=1
-              EOF
+                EOF
             fi
             if [[ `hostname |awk -F"-" '{print $2}'` == "novacompute" || `hostname |awk -F"-" '{print $2}'` == "contrailtsn" ]]; then 
               yum install -y contrail-vrouter-utils
@@ -104,6 +119,7 @@ resources:
           params:
             $phy_int: {get_param: VrouterPhysicalInterface}
             $contrail_repo: {get_param: ContrailRepo}
+            $contrail_repo_new: {get_param: ContrailRepoNew}
 
 outputs:
   # This means get_resource from the parent template will get the userdata, see:
