--- a/environments/contrail/ips-from-pool-all.yaml
+++ b/environments/contrail/ips-from-pool-all.yaml
@@ -19,6 +19,11 @@ resource_registry:
   OS::TripleO::ContrailAnalyticsDatabaseWithContainer::Ports::InternalApiPort: ../../network/ports/internal_api_from_pool.yaml
   OS::TripleO::ContrailTsnWithContainer::Ports::InternalApiPort: ../../network/ports/internal_api_from_pool.yaml
 
+  OS::TripleO::ContrailController::Ports::InternalApiPort: ../../network/ports/internal_api_from_pool.yaml
+  OS::TripleO::ContrailAnalytics::Ports::InternalApiPort: ../../network/ports/internal_api_from_pool.yaml
+  OS::TripleO::ContrailAnalyticsDatabase::Ports::InternalApiPort: ../../network/ports/internal_api_from_pool.yaml
+  OS::TripleO::ContrailTsn::Ports::InternalApiPort: ../../network/ports/internal_api_from_pool.yaml
+
   #OS::TripleO::CephStorage::Ports::ExternalPort: ../../network/ports/noop.yaml
   #OS::TripleO::CephStorage::Ports::InternalApiPort: ../../network/ports/noop.yaml
   #OS::TripleO::CephStorage::Ports::StoragePort: ../../network/ports/storage_from_pool.yaml
@@ -60,26 +65,55 @@ parameter_defaults:
     - 10.0.0.34
     - 10.0.0.35
     - 10.0.0.36
-  ContrailControllerWithContainerIPs:
+  ContrailControllerIPs:
     internal_api:
     - 10.0.0.40
     - 10.0.0.41
     - 10.0.0.42
-  ContrailAnalyticsWithContainerIPs:
+  ContrailAnalyticsIPs:
     internal_api:
     - 10.0.0.50
     - 10.0.0.51
     - 10.0.0.52
-  ContrailAnalyticsDatabaseWithContainerIPs:
+  ContrailAnalyticsDatabaseIPs:
     internal_api:
     - 10.0.0.60
     - 10.0.0.61
     - 10.0.0.62
-  ContrailTsnWithContainerIPs:
+  ContrailTsnIPs:
     internal_api:
     - 10.0.0.70
     - 10.0.0.71
     - 10.0.0.72
+
+  ContrailControllerWithContainerIPs:
+    internal_api:
+    - 10.0.0.45
+    - 10.0.0.46
+    - 10.0.0.47
+    - 10.0.0.48
+    - 10.0.0.49
+  ContrailAnalyticsWithContainerIPs:
+    internal_api:
+    - 10.0.0.55
+    - 10.0.0.56
+    - 10.0.0.57
+    - 10.0.0.58
+    - 10.0.0.59
+  ContrailAnalyticsDatabaseWithContainerIPs:
+    internal_api:
+    - 10.0.0.65
+    - 10.0.0.66
+    - 10.0.0.67
+    - 10.0.0.68
+    - 10.0.0.69
+  ContrailTsnWithContainerIPs:
+    internal_api:
+    - 10.0.0.75
+    - 10.0.0.76
+    - 10.0.0.77
+    - 10.0.0.78
+    - 10.0.0.79
   #CephStorageIPs:
     # Each ceph node will get an IP from the lists below, first node, first IP
     #storage:
