--- a/environments/contrail/install_vrouter_kmod.yaml
+++ b/environments/contrail/install_vrouter_kmod.yaml
@@ -45,21 +45,23 @@ resources:
             gpgcheck=0
             protect=1
             EOF
+            cat <<EOF > /etc/yum.repos.d/contrail-new.repo
+            [ContrailNew]
+            name=Contrail Repo New
+            baseurl=$contrail_repo_new
+            enabled=1
+            gpgcheck=0
+            protect=1
+            EOF
             if [[ `hostname |awk -F"-" '{print $2}'` == "contrailcontroller" || `hostname |awk -F"-" '{print $2}'` == "contrailanalytics" || `hostname |awk -F"-" '{print $2}'` == "contrailanalyticsdatabase" ]]; then
               sed -i '/\[main\]/a \ \ \ \ \parser = future' /etc/puppet/puppet.conf
+              rm -rf /etc/yum.repos.d/contrail-new.repo
             fi
             if [[ `hostname |awk -F"-" '{print $2}'` == "contrailcontrollerwithcontainer" || `hostname |awk -F"-" '{print $2}'` == "contrailanalyticswithcontainer" || `hostname |awk -F"-" '{print $2}'` == "contrailanalyticsdatabasewithcontainer" ]]; then
               sed -i '/\[main\]/a \ \ \ \ \parser = future' /etc/puppet/puppet.conf
-              cat <<-EOF > /etc/yum.repos.d/contrail-new.repo
-              [Contrail]
-              name=Contrail Repo New
-              baseurl=$contrail_repo_new
-              enabled=1
-              gpgcheck=0
-              protect=1
-                EOF
             fi
             if [[ `hostname |awk -F"-" '{print $2}'` == "novacompute" || `hostname |awk -F"-" '{print $2}'` == "contrailtsn" ]]; then 
+              rm -rf /etc/yum.repos.d/contrail-new.repo
               yum install -y contrail-vrouter-utils
               function pkt_setup () {
                   for f in /sys/class/net/$1/queues/rx-*
